# citation-distributions

./: .gitignore  README.md  pyproject.toml  ranodm-par-combined.ipynb  ranodm-par-figures.ipynb  ranodm-par-individual.ipynb
data/scopus/: scopus-simulations.csv
results/: model_random_par_all_citations.json  model_random_par_external_citations.json  model_random_par_self_citations.json
