[tool.poetry]
name = "citation-distributions"
version = "1.0.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
numba = "^0.59.1"
jupyterlab = "^4.2.1"
scipy = "^1.13.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
